--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,7 @@
 
 //-------------------- Base Colors --------------------//
 
-$theme-color:                   		#1ABC9C;
+$theme-color:                   		 #5E8E3E;
 $body-text-color:               		#555;
 
 $body-bg:														$white; // White
