--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ span.middot {
 .ls2 { letter-spacing: 2px !important; }
 
 .ls3 { letter-spacing: 3px !important; }
-
+5E8E3E
 .ls4 { letter-spacing: 4px !important; }
 
 .ls5 { letter-spacing: 5px !important; }
@@ -8936,7 +8936,7 @@ td.actions {
 	padding: 8px 22px;
 	font-size: 0.875rem;
 	line-height: 24px;
-	background-color: #1ABC9C;
+	background-color: #5E8E3E;
 	color: #FFF;
 	font-weight: 700;
 	text-transform: uppercase;
